// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should render empty state 1`] = `
<DocumentFragment>
  <div>
    <nav
      aria-labelledby="main menu"
      class="sc-fzokOt jOdSeW"
    >
      <div
        class="px-4 sm:px-6 lg:px-8"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            />
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-3 -mt-1 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hCRZAv"
                height="42"
                width="42"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hmuEJr"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral-500"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-700"
              >
                34,253.75
              </div>
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fzpans kQdYod -mr-1 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fzpans kQdYod relative bg-theme-primary-600 border-theme-primary-600 rotate-90"
                  >
                    <span
                      class="text-sm text-theme-background"
                    >
                      IO
                    </span>
                    <span
                      class="sc-fzoLsD bZeraU flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent transform  bg-theme-primary-100 border-theme-primary-100 bottom-2 -right-4 text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <section
      class="bg-theme-neutral-100"
    >
      <div
        class="bg-theme-background px-10 py-16"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              My Registrations
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              You can register a Delagate, Business and Bridgechain.
            </div>
          </div>
          <div>
            <div
              class="divide-theme-neutral-300 flex justify-end space-x-10 divide-x"
            >
              <button
                class="my-auto font-semibold cursor-pointer text-theme-primary-200"
                data-testid="header-search-bar__button"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <span>
                    Search
                  </span>
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      search.svg
                    </svg>
                  </div>
                </div>
              </button>
              <div
                class="pl-10"
              >
                <button
                  class="sc-AxjAm ddQVWI"
                  color="primary"
                  type="button"
                >
                  Register
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-theme-background flex flex-col items-center justify-center px-10 py-20 mt-4"
        data-testid="my-registrations__empty-state"
      >
        <svg>
          register.svg
        </svg>
        <span
          class="mt-7 text-theme-neutral-600 text-sm"
        >
          Register Business, Bridgechain and Delegate in the most convenient way.
        </span>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render null for a not knwown type of table 1`] = `
<DocumentFragment>
  <div>
    <nav
      aria-labelledby="main menu"
      class="sc-fzokOt jOdSeW"
    >
      <div
        class="px-4 sm:px-6 lg:px-8"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            />
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-3 -mt-1 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hCRZAv"
                height="42"
                width="42"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hmuEJr"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral-500"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-700"
              >
                34,253.75
              </div>
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fzpans kQdYod -mr-1 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fzpans kQdYod relative bg-theme-primary-600 border-theme-primary-600 rotate-90"
                  >
                    <span
                      class="text-sm text-theme-background"
                    >
                      IO
                    </span>
                    <span
                      class="sc-fzoLsD bZeraU flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent transform  bg-theme-primary-100 border-theme-primary-100 bottom-2 -right-4 text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <section
      class="bg-theme-neutral-100"
    >
      <div
        class="bg-theme-background px-10 py-16"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              My Registrations
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              You can register a Delagate, Business and Bridgechain.
            </div>
          </div>
          <div>
            <div
              class="divide-theme-neutral-300 flex justify-end space-x-10 divide-x"
            >
              <button
                class="my-auto font-semibold cursor-pointer text-theme-primary-200"
                data-testid="header-search-bar__button"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <span>
                    Search
                  </span>
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      search.svg
                    </svg>
                  </div>
                </div>
              </button>
              <div
                class="pl-10"
              >
                <button
                  class="sc-AxjAm ddQVWI"
                  color="primary"
                  type="button"
                >
                  Register
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render properly 1`] = `
<DocumentFragment>
  <div>
    <nav
      aria-labelledby="main menu"
      class="sc-fzokOt jOdSeW"
    >
      <div
        class="px-4 sm:px-6 lg:px-8"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            />
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-3 -mt-1 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hCRZAv"
                height="42"
                width="42"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hmuEJr"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral-500"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-700"
              >
                34,253.75
              </div>
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fzpans kQdYod -mr-1 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fzpans kQdYod relative bg-theme-primary-600 border-theme-primary-600 rotate-90"
                  >
                    <span
                      class="text-sm text-theme-background"
                    >
                      IO
                    </span>
                    <span
                      class="sc-fzoLsD bZeraU flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent transform  bg-theme-primary-100 border-theme-primary-100 bottom-2 -right-4 text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <section
      class="bg-theme-neutral-100"
    >
      <div
        class="bg-theme-background px-10 py-16"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              My Registrations
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              You can register a Delagate, Business and Bridgechain.
            </div>
          </div>
          <div>
            <div
              class="divide-theme-neutral-300 flex justify-end space-x-10 divide-x"
            >
              <button
                class="my-auto font-semibold cursor-pointer text-theme-primary-200"
                data-testid="header-search-bar__button"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <span>
                    Search
                  </span>
                  <div
                    class="sc-AxirZ eEbZjj"
                    height="20"
                    width="20"
                  >
                    <svg>
                      search.svg
                    </svg>
                  </div>
                </div>
              </button>
              <div
                class="pl-10"
              >
                <button
                  class="sc-AxjAm ddQVWI"
                  color="primary"
                  type="button"
                >
                  Register
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col px-10 mt-4 bg-theme-background"
      >
        <span
          class="py-10 text-2xl font-bold"
        >
          Business
        </span>
        <div
          class="sc-fznyAO fGJXsR"
          role="table"
        >
          <table
            class="table-auto"
          >
            <thead>
              <tr
                role="row"
              >
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  invisible"
                  >
                    <div
                      class="mr-2"
                    >
                      Avatar
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md"
                  >
                    <div
                      class="mr-2"
                    >
                      Agent
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md"
                  >
                    <div
                      class="mr-2"
                    >
                      Business Name
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--3"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md -ml-8"
                  >
                    <div
                      class="mr-2"
                    >
                      History
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--4"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md ml-8 -mr-6"
                  >
                    <div
                      class="mr-2"
                    >
                      Website
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--5"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md"
                  >
                    <div
                      class="mr-2"
                    >
                      MSQ
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--6"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md ml-2"
                  >
                    <div
                      class="mr-2"
                    >
                      Repository
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--7"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  invisible float-right"
                  >
                    <div
                      class="mr-2"
                    >
                      Spacer
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--8"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  invisible float-right"
                  >
                    <div
                      class="mr-2"
                    >
                      Options
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed border-theme-neutral-light"
                data-testid="business-table__row"
              >
                <td
                  class="w-24 py-6"
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="sc-fzpans kQdYod border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cBelGv"
                      data-testid="Avatar"
                    >
                      <img
                        alt="AaAy"
                        src="data:image/svg+xml;utf8,conic-gradient(from 17.875111619290816deg at 37.05070666750771% 6.694306250453323%, #FEB2B2, calc(0 * 100% / 5), transparent 0),conic-gradient(from 50.04053558916528deg at 62.567353519788824% 34.213639563519834%, #319795, calc(1 * 100% / 5), transparent 0),conic-gradient(from 400.64439386429615deg at 32.014126896910234% 37.55312245190967%, #F6AD55, calc(2 * 100% / 5), transparent 0),conic-gradient(from 376.5641300063648deg at 60.780374638028576% 43.764231779135116%, #FBD38D, calc(3 * 100% / 5), transparent 0),conic-gradient(from 116.6425345886149deg at 38.93629903794377% 90.98220538490784%, #FC8181, calc(4 * 100% / 5), transparent 0)"
                        title="AaAy"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 mt-1 font-semibold"
                >
                  <span>
                    OLEBank
                  </span>
                </td>
                <td
                  class="py-6 font-semibold"
                >
                  <span>
                    ARK Ecosystem
                  </span>
                </td>
                <td
                  class="py-6 text-bold text-theme-primary"
                >
                  <span
                    class="-ml-8"
                  >
                    View
                  </span>
                </td>
                <td
                  class="py-6 text-theme-neutral-400"
                >
                  <div
                    class="sc-AxirZ iQaTP ml-12"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </td>
                <td
                  class="py-6 text-bold text-theme-primary"
                >
                  <div
                    class="sc-AxirZ hmuEJr ml-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      msq.svg
                    </svg>
                  </div>
                </td>
                <td
                  class="py-6 text-bold text-theme-primary"
                >
                  <span
                    class="ml-3"
                  >
                    View
                  </span>
                </td>
                <td
                  class="px-1 px-12"
                />
                <td
                  class="flex items-center justify-center float-right py-6 mt-1"
                >
                  <button
                    class="sc-AxjAm kTAyCf"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right outline-none cursor-pointer focus:outline-none"
                      >
                        <div
                          class="sc-AxirZ eEbZjj"
                          height="20"
                          width="20"
                        >
                          <svg>
                            settings.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
              <tr
                class="border-b border-dashed border-theme-neutral-light"
                data-testid="business-table__row"
              >
                <td
                  class="w-24 py-6"
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="sc-fzpans kQdYod border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cBelGv"
                      data-testid="Avatar"
                    >
                      <img
                        alt="AaAy"
                        src="data:image/svg+xml;utf8,conic-gradient(from 17.875111619290816deg at 37.05070666750771% 6.694306250453323%, #FEB2B2, calc(0 * 100% / 5), transparent 0),conic-gradient(from 50.04053558916528deg at 62.567353519788824% 34.213639563519834%, #319795, calc(1 * 100% / 5), transparent 0),conic-gradient(from 400.64439386429615deg at 32.014126896910234% 37.55312245190967%, #F6AD55, calc(2 * 100% / 5), transparent 0),conic-gradient(from 376.5641300063648deg at 60.780374638028576% 43.764231779135116%, #FBD38D, calc(3 * 100% / 5), transparent 0),conic-gradient(from 116.6425345886149deg at 38.93629903794377% 90.98220538490784%, #FC8181, calc(4 * 100% / 5), transparent 0)"
                        title="AaAy"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 mt-1 font-semibold"
                >
                  <span>
                    OLEBank
                  </span>
                </td>
                <td
                  class="py-6 font-semibold"
                >
                  <span>
                    ARK Ecosystem
                  </span>
                </td>
                <td
                  class="py-6 text-bold text-theme-primary"
                >
                  <span
                    class="-ml-8"
                  >
                    View
                  </span>
                </td>
                <td
                  class="py-6 text-theme-neutral-400"
                >
                  <div
                    class="sc-AxirZ iQaTP ml-12"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </td>
                <td
                  class="py-6 text-bold text-theme-primary"
                >
                  <div
                    class="sc-AxirZ hmuEJr ml-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      msq.svg
                    </svg>
                  </div>
                </td>
                <td
                  class="py-6 text-bold text-theme-primary"
                >
                  <span
                    class="ml-3"
                  >
                    View
                  </span>
                </td>
                <td
                  class="px-1 px-12"
                />
                <td
                  class="flex items-center justify-center float-right py-6 mt-1"
                >
                  <button
                    class="sc-AxjAm kTAyCf"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right outline-none cursor-pointer focus:outline-none"
                      >
                        <div
                          class="sc-AxirZ eEbZjj"
                          height="20"
                          width="20"
                        >
                          <svg>
                            settings.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="flex flex-col px-10 mt-4 bg-theme-background"
      >
        <span
          class="py-10 text-2xl font-bold"
        >
          Blockchain
        </span>
        <div
          class="sc-fznyAO fGJXsR"
          role="table"
        >
          <table
            class="table-auto"
          >
            <thead>
              <tr
                role="row"
              >
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  invisible"
                  >
                    <div
                      class="mr-2"
                    >
                      Avatar
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md"
                  >
                    <div
                      class="mr-2"
                    >
                      Agent
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md"
                  >
                    <div
                      class="mr-2"
                    >
                      Blockchain Name
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--3"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md"
                  >
                    <div
                      class="mr-2"
                    >
                      History
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--4"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md"
                  >
                    <div
                      class="mr-2"
                    >
                      Website
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--5"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md"
                  >
                    <div
                      class="mr-2"
                    >
                      MSQ
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--6"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md ml-4"
                  >
                    <div
                      class="mr-2"
                    >
                      Repository
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--7"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md -ml-4"
                  >
                    <div
                      class="mr-2"
                    >
                      Seed
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--8"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  invisible float-right"
                  >
                    <div
                      class="mr-2"
                    >
                      Spacer
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--9"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  invisible float-right"
                  >
                    <div
                      class="mr-2"
                    >
                      Options
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed border-theme-neutral-light"
                data-testid="blockchain-table__row"
              >
                <td
                  class="w-24 py-6"
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="sc-fzpans kQdYod border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cBelGv"
                      data-testid="Avatar"
                    >
                      <img
                        alt="1Pdj"
                        src="data:image/svg+xml;utf8,conic-gradient(from 526.6380564700704deg at 12.585681204907647% 20.345074241305944%, #2C7A7B, calc(0 * 100% / 5), transparent 0),conic-gradient(from 94.21613970325049deg at 47.2683775164122% 65.01607096890638%, #38B2AC, calc(1 * 100% / 5), transparent 0),conic-gradient(from 604.8113000640175deg at 92.3481882128904% 22.11740552501137%, #7F9CF5, calc(2 * 100% / 5), transparent 0),conic-gradient(from 2.4098901141677556deg at 89.8165991216207% 2.164900453064249%, #2C7A7B, calc(3 * 100% / 5), transparent 0),conic-gradient(from 112.00286342140187deg at 42.888226836226316% 88.61162795277781%, #F56565, calc(4 * 100% / 5), transparent 0)"
                        title="1Pdj"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 mt-1 font-semibold"
                >
                  <span>
                    OLEBank
                  </span>
                </td>
                <td
                  class="py-6 font-semibold"
                >
                  <span>
                    ARK Ecosystem
                  </span>
                </td>
                <td
                  class="py-6 text-semibold text-theme-primary"
                >
                  <span>
                    View
                  </span>
                </td>
                <td
                  class="py-6 text-theme-neutral-400"
                >
                  <div
                    class="sc-AxirZ iQaTP ml-4"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </td>
                <td
                  class="py-6 text-semibold text-theme-primary"
                >
                  <div
                    class="sc-AxirZ hmuEJr ml-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      msq.svg
                    </svg>
                  </div>
                </td>
                <td
                  class="py-6 text-semibold text-theme-primary"
                >
                  <span
                    class="ml-7"
                  >
                    View
                  </span>
                </td>
                <td
                  class="py-6 text-semibold text-theme-primary"
                >
                  <span
                    class="-ml-5"
                  >
                    View
                  </span>
                </td>
                <td
                  class="px-1 px-11"
                />
                <td
                  class="flex items-center justify-center float-right py-6 mt-1"
                >
                  <button
                    class="sc-AxjAm kTAyCf"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right outline-none cursor-pointer focus:outline-none"
                      >
                        <div
                          class="sc-AxirZ eEbZjj"
                          height="20"
                          width="20"
                        >
                          <svg>
                            settings.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
              <tr
                class="border-b border-dashed border-theme-neutral-light"
                data-testid="blockchain-table__row"
              >
                <td
                  class="w-24 py-6"
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="sc-fzpans kQdYod border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cBelGv"
                      data-testid="Avatar"
                    >
                      <img
                        alt="1Pdj"
                        src="data:image/svg+xml;utf8,conic-gradient(from 526.6380564700704deg at 12.585681204907647% 20.345074241305944%, #2C7A7B, calc(0 * 100% / 5), transparent 0),conic-gradient(from 94.21613970325049deg at 47.2683775164122% 65.01607096890638%, #38B2AC, calc(1 * 100% / 5), transparent 0),conic-gradient(from 604.8113000640175deg at 92.3481882128904% 22.11740552501137%, #7F9CF5, calc(2 * 100% / 5), transparent 0),conic-gradient(from 2.4098901141677556deg at 89.8165991216207% 2.164900453064249%, #2C7A7B, calc(3 * 100% / 5), transparent 0),conic-gradient(from 112.00286342140187deg at 42.888226836226316% 88.61162795277781%, #F56565, calc(4 * 100% / 5), transparent 0)"
                        title="1Pdj"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 mt-1 font-semibold"
                >
                  <span>
                    OLEBank
                  </span>
                </td>
                <td
                  class="py-6 font-semibold"
                >
                  <span>
                    ARK Ecosystem
                  </span>
                </td>
                <td
                  class="py-6 text-semibold text-theme-primary"
                >
                  <span>
                    View
                  </span>
                </td>
                <td
                  class="py-6 text-theme-neutral-400"
                >
                  <div
                    class="sc-AxirZ iQaTP ml-4"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      redirect.svg
                    </svg>
                  </div>
                </td>
                <td
                  class="py-6 text-semibold text-theme-primary"
                >
                  <div
                    class="sc-AxirZ hmuEJr ml-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      msq.svg
                    </svg>
                  </div>
                </td>
                <td
                  class="py-6 text-semibold text-theme-primary"
                >
                  <span
                    class="ml-7"
                  >
                    View
                  </span>
                </td>
                <td
                  class="py-6 text-semibold text-theme-primary"
                >
                  <span
                    class="-ml-5"
                  >
                    View
                  </span>
                </td>
                <td
                  class="px-1 px-11"
                />
                <td
                  class="flex items-center justify-center float-right py-6 mt-1"
                >
                  <button
                    class="sc-AxjAm kTAyCf"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right outline-none cursor-pointer focus:outline-none"
                      >
                        <div
                          class="sc-AxirZ eEbZjj"
                          height="20"
                          width="20"
                        >
                          <svg>
                            settings.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="flex flex-col px-10 mt-4 bg-theme-background"
      >
        <span
          class="py-10 text-2xl font-bold"
        >
          Delegate
        </span>
        <div
          class="sc-fznyAO fGJXsR"
          role="table"
        >
          <table
            class="table-auto"
          >
            <thead>
              <tr
                role="row"
              >
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  invisible"
                  >
                    <div
                      class="mr-2"
                    >
                      Avatar
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md"
                  >
                    <div
                      class="mr-2"
                    >
                      Delegate Name
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md -ml-14"
                  >
                    <div
                      class="mr-2"
                    >
                      Rank
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--3"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md"
                  >
                    <div
                      class="mr-2"
                    >
                      MSQ
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--4"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md"
                  >
                    <div
                      class="mr-2"
                    >
                      Status
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--5"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  invisible w-3 float-right"
                  >
                    <div
                      class="mr-2"
                    >
                      Amount
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
                <th
                  class="text-sm text-left select-none text-theme-neutral-500"
                  colspan="1"
                  data-testid="table__th--6"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top  font-semibold text-md float-right ml-32"
                  >
                    <div
                      class="mr-2"
                    >
                      Votes
                    </div>
                    <div
                      class="flex items-center text-theme-color-neutral-500"
                      data-testid="table__Sort"
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed border-theme-neutral-light"
                data-testid="delegate-table__row"
              >
                <td
                  class="w-24 py-6"
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="sc-fzpans kQdYod border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cBelGv"
                      data-testid="Avatar"
                    >
                      <img
                        alt="APTz"
                        src="data:image/svg+xml;utf8,conic-gradient(from 457.62904038126885deg at 3.657633529618897% 26.70874635583157%, #742A2A, calc(0 * 100% / 5), transparent 0),conic-gradient(from 470.34506679538134deg at 0.444908826291736% 49.77415829202623%, #ED8936, calc(1 * 100% / 5), transparent 0),conic-gradient(from 173.63070498265697deg at 11.041577994097656% 66.10187902973202%, #9B2C2C, calc(2 * 100% / 5), transparent 0),conic-gradient(from 81.2488414558004deg at 51.135305421440435% 53.983702579553004%, #9B2C2C, calc(3 * 100% / 5), transparent 0),conic-gradient(from 311.7017852030667deg at 37.122865840528625% 0.9124707554442968%, #4C51BF, calc(4 * 100% / 5), transparent 0)"
                        title="APTz"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 mt-1 font-semibold"
                >
                  <span>
                    OLEBank
                  </span>
                </td>
                <td
                  class="py-6  text-theme-neutral-700"
                >
                  <span
                    class="-ml-14"
                  >
                    #2
                  </span>
                </td>
                <td
                  class="py-6  text-bold text-theme-primary"
                >
                  <div
                    class="sc-AxirZ hmuEJr"
                    height="22"
                    width="22"
                  >
                    <svg>
                      msq.svg
                    </svg>
                  </div>
                </td>
                <td
                  class="py-6  text-theme-neutral-400"
                >
                  <div
                    class="sc-AxirZ bMjbpr ml-1 text-theme-success"
                    height="30"
                    width="30"
                  >
                    <svg>
                      checkmark.svg
                    </svg>
                  </div>
                </td>
                <td>
                  <div
                    class="flex float-right text-semibold text-theme-neutral-800"
                  >
                    <div
                      class="flex items-center"
                    >
                      <span
                        class="ml-16"
                      >
                        2,450.643
                      </span>
                      <div
                        class="sc-AxirZ iQaTP ml-2"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="w-1/12 text-semibold text-theme-neutral-800"
                >
                  <div
                    class="flex items-center ml-5 -mr-10"
                  >
                    <small
                      class="text-theme-neutral-500"
                    >
                      2,43%
                    </small>
                    <span
                      class="ml-1"
                    >
                      2,450.643
                    </span>
                    <div
                      class="sc-AxirZ iQaTP ml-2"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                </td>
                <td
                  class="flex items-center justify-center float-right py-6 mt-1"
                >
                  <button
                    class="sc-AxjAm kTAyCf"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right outline-none cursor-pointer focus:outline-none"
                      >
                        <div
                          class="sc-AxirZ eEbZjj"
                          height="20"
                          width="20"
                        >
                          <svg>
                            settings.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
              <tr
                class="border-b border-dashed border-theme-neutral-light"
                data-testid="delegate-table__row"
              >
                <td
                  class="w-24 py-6"
                >
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="sc-fzpans kQdYod border-theme-neutral-800"
                    >
                      <div
                        class="sc-AxirZ hmuEJr"
                        height="22"
                        width="22"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cBelGv"
                      data-testid="Avatar"
                    >
                      <img
                        alt="APTz"
                        src="data:image/svg+xml;utf8,conic-gradient(from 457.62904038126885deg at 3.657633529618897% 26.70874635583157%, #742A2A, calc(0 * 100% / 5), transparent 0),conic-gradient(from 470.34506679538134deg at 0.444908826291736% 49.77415829202623%, #ED8936, calc(1 * 100% / 5), transparent 0),conic-gradient(from 173.63070498265697deg at 11.041577994097656% 66.10187902973202%, #9B2C2C, calc(2 * 100% / 5), transparent 0),conic-gradient(from 81.2488414558004deg at 51.135305421440435% 53.983702579553004%, #9B2C2C, calc(3 * 100% / 5), transparent 0),conic-gradient(from 311.7017852030667deg at 37.122865840528625% 0.9124707554442968%, #4C51BF, calc(4 * 100% / 5), transparent 0)"
                        title="APTz"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 mt-1 font-semibold"
                >
                  <span>
                    OLEBank
                  </span>
                </td>
                <td
                  class="py-6  text-theme-neutral-700"
                >
                  <span
                    class="-ml-14"
                  >
                    #352
                  </span>
                </td>
                <td
                  class="py-6  text-bold text-theme-primary"
                >
                  <div
                    class="sc-AxirZ hmuEJr"
                    height="22"
                    width="22"
                  >
                    <svg>
                      msq.svg
                    </svg>
                  </div>
                </td>
                <td
                  class="py-6  text-theme-neutral-400"
                >
                  <div
                    class="sc-AxirZ iQaTP ml-2 text-theme-neutral-500"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      status-clock.svg
                    </svg>
                  </div>
                </td>
                <td>
                  <div
                    class="flex float-right text-semibold text-theme-neutral-800"
                  >
                    <div
                      class="flex items-center"
                    >
                      <span
                        class="ml-16"
                      >
                        2,450.643
                      </span>
                      <div
                        class="sc-AxirZ iQaTP ml-2"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </td>
                <td
                  class="w-1/12 text-semibold text-theme-neutral-800"
                >
                  <div
                    class="flex items-center ml-5 -mr-10"
                  >
                    <small
                      class="text-theme-neutral-500"
                    >
                      2,43%
                    </small>
                    <span
                      class="ml-1"
                    >
                      2,450.643
                    </span>
                    <div
                      class="sc-AxirZ iQaTP ml-2"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                </td>
                <td
                  class="flex items-center justify-center float-right py-6 mt-1"
                >
                  <button
                    class="sc-AxjAm kTAyCf"
                    color="primary"
                    type="button"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right outline-none cursor-pointer focus:outline-none"
                      >
                        <div
                          class="sc-AxirZ eEbZjj"
                          height="20"
                          width="20"
                        >
                          <svg>
                            settings.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
